--- a/css/style.css
+++ b/css/style.css
@@ -7,5 +7,17 @@ h1 {
 }
 
 p {
-  text-align: center;
+  text-align: center;*/
+}
+
+button{
+    text-align: center;
+}
+
+input {
+   text-align: center;
+}
+
+div{
+   float: left;
 }
